Fix up various manifest errors
Make render doc runconfig depend on `RENDERDOC_LIB` env variable